chore(backtester): add missing Javadocs
- Create descriptive Javadocs for all fields and methods in BacktestEngine that previously weren't annotated